0.83.5
  - Increased save slots from 10 to 100. Each page in
    the save slot menu (under "Capture") still shows
    10 slots, but you can now go to the previous or
    next page for more save slots. (Wengier).
  - Added support for Glide wrapper. The library file
    glide2x.dll/libglide2x.so/libglide2x.dylib will be
    required for Glide to work. Be sure to use 32-bit
    dll for 32-bit DOSBox-X binary, and 64-bit dll for
    64-bit DOSBox-X binary. (Wengier)
0.83.4
  - Fixed loading saved states in fullscreen mode with
    the "aspect=true" setting. (Wengier)
  - Added config option "saveslot" to select default
    save slot (1-10). The timestamps for the saved
    states will also be shown in the menu. (Wengier)
  - Added key mapper for sending the Ctrl+Alt+Del key,
    with HOST(F11/F12)+Del by default. (Wengier)
  - Added dosbox-x.conf setting to ignore the EGA/VGA
    "extended memory" bit. It was originally defined
    back when stock EGA/VGA cards could ship with 64KB
    of memory. The option is needed for DOS games that
    accidentally clear the bit when using unchained
    256-color modes (Mr. Blobby).
  - Added new default value "auto" for the setting
    "usescancodesauto" (in [sdl] section of the config
    file) to work around issues with non-US keyboard
    layouts on SDL1 builds. (Wengier)
  - Added code pages 808, 850, 852, 853, 855, 857,
    858, 869, 872 for host to guest codepage mapping
    on mounted local or overlay drives. (Wengier)
  - The mapper options "Increase recording volume" and
    "Decrease recording volume" as well as function
    "Show sound levels" (from MIXER command) appear
    now as menu items (under "Sound") too. (Wengier)
  - Fixed inputting of ASCII character 224 and 240
    in Windows SDL2 or MinGW builds. (Wengier)
  - Fixed possible DPMI error when running Windows
    98 installation from the DOSBox-X shell without
    using a batch file. (Wengier)
  - Fixed a bug in the FAT driver that can cause