@@ -182,7 +182,7 @@ fileio      = false
 #                                                      
 #                                        vmemsizekb: Amount of video memory in kilobytes, in addition to vmemsize
 #                                          captures: Directory where things like wave, midi, screenshot get captured.
-#                                          saveslot: Select the default save slot (1-10) to save/load states.
+#                                          saveslot: Select the default save slot (1-100) to save/load states.
 #                    skip encoding unchanged frames: Unchanged frames will not be sent to the video codec as a possible performance and bandwidth optimization.
 #                             capture chroma format: Chroma format to use when capturing to H.264. 'auto' picks the best quality option.
 #                                                      4:4:4       Chroma is at full resolution. This provides the best quality, however not widely supported by editing software.
@@ -848,7 +848,7 @@ auxdevice               = intellimouse
 #           Possible values: true,false.
 #    lfb: Enable LFB access for Glide. OpenGlide does not support locking aux buffer, please use _noaux modes.
 #         OpenGlide does not support locking aux buffer, please use _noaux modes.
-# splash: Show 3dfx splash screen (requires 3dfxSpl2.dll).
+# splash: Show 3dfx splash screen (Windows; requires 3dfxSpl2.dll).
 voodoo = auto
 glide  = false
 lfb    = full_noaux
