@@ -1512,6 +1512,7 @@ void SHELL_Init() {
 #if defined(WIN32) && !defined(HX_DOS)
     mainMenu.get_item("dos_win_autorun").check(winautorun).enable(true).refresh_item(mainMenu);
     mainMenu.get_item("dos_win_wait").check(startwait).enable(true).refresh_item(mainMenu);
+    mainMenu.get_item("quick_launch").enable(true).refresh_item(mainMenu);
 #endif
 }
 
